[update]プライバシーポリシーを更新

--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -6,10 +6,109 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>プライバシーポリシー</title>
+  <style>
+    body {
+      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      padding: 1em;
+    }
+  </style>
 </head>
 
 <body>
-  <h1>プライバシーポリシー</h1>
+  <strong>プライバシーポリシー</strong>
+  <p>
+    Fusa Fukushiは「さがしてビンゴ！」アプリを基本無料・広告搭載、一部課金有の商用アプリとして開発しました。当アプリはFusa Fukushiによって提供されており、そのまま使用されることを目的としています。
+  </p>
+  <p>
+    当ページは、私が収集、使用、開示する個人情報に関するポリシーを使用する方に通知するために使用されます。
+  </p>
+  <p>
+    当アプリを使用することを選択した場合、このポリシーに基づいて情報の収集と使用に同意したことになります。収集した個人情報は、サービスの提供および改善に使用されます。このプライバシーポリシーで説明されている以外の目的で、情報を使用することはありません。
+  </p>
+  <p>
+    当プライバシーポリシーで定義されている用語は、「さがしてビンゴ！」の利用規約に定義されているものと同じ意味を持ちます。
+  </p>
+  <p><strong>情報の収集と利用</strong></p>
+  <p>
+    当サービスを使用する際に、より良い体験を得るために、特定の個人を特定できる情報を提供するように求めることがあります。要求された情報は、お使いのデバイスに保持され、私が何らかの方法で収集することはありません。
+  </p>
+  <div>
+    <p>
+      アプリは、情報を収集する可能性のあるサードパーティサービスを使用しています。
+    </p>
+    <p>
+      アプリで使用されるサードパーティサービスプロバイダーのプライバシーポリシーへのリンク
+    </p>
+    <ul>
+      <li><a href="https://www.google.com/policies/privacy/" target="_blank" rel="noopener noreferrer">Google Play
+          Services</a></li>
+      <li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank"
+          rel="noopener noreferrer">AdMob</a></li>
+      <li><a href="https://firebase.google.com/policies/analytics" target="_blank" rel="noopener noreferrer">Google
+          Analytics for Firebase</a></li>
+      <li><a href="https://firebase.google.com/support/privacy/" target="_blank" rel="noopener noreferrer">Firebase
+          Crashlytics</a></li>
+      <li><a href="https://www.revenuecat.com/privacy" target="_blank" rel="noopener noreferrer">RevenueCat</a></li>
+    </ul>
+  </div>
+  <p><strong>ログデータ</strong></p>
+  <p>
+    このサービスを利用する場合、アプリにエラーが発生した場合には、ログデータを収集します。
+    このログデータには、デバイスのOSバージョン、サービスの使用日時などの情報が含まれる場合がありますが、外部に公開することはございません。
+  </p>
+  <p><strong>Cookies</strong></p>
+  <p>
+    Cookies（クッキー）とは、一般的に匿名のユニークな識別子として使用される、少量のデータが含まれたファイルです。これらは、訪問するウェブサイトからブラウザに送信され、デバイスの内部メモリに保存されます。
+  </p>
+  <p>
+    このサービスは明示的に「Cookies」を使用しません。ただし、アプリは「Cookies」を使用して情報を収集し、サービスの改善に役立つサードパーティのコードやライブラリを使用する場合があります。
+    これらのCookiesを受け入れるか拒否するかを選択でき、Cookiesがデバイスに送信されたことを知ることができます。Cookiesを拒否する場合、このサービスの一部を使用できなくなる場合があります。
+  </p>
+  <p><strong>サービスプロバイダー</strong></p>
+  <p>
+    私は以下の理由でサードパーティの企業や個人を雇用する場合があります。
+  </p>
+  <ul>
+    <li>私たちのサービスを改善するために</li>
+    <li>私たちの代わりにサービスを提供するために</li>
+  </ul>
+  <p>
+    その場合、私はこのサービスのユーザーに通知したいと思います。
+    これらの第三者は、割り当てられたタスクを実行するために、収集した情報にアクセスすることができます。ただし、他の目的で情報を開示または使用しないよう義務付けられています。
+  </p>
+  <p><strong>セキュリティ</strong></p>
+  <p>
+    私たちは、貴重な個人情報を提供していただいている信頼を大切にし、商業的に受け入れられる手段を使って保護するように努めています。
+    ただし、インターネットを通じて転送する方法や電子的に保管する方法は100％安全で信頼できるわけではなく、完全なセキュリティを保証することはできません。
+  </p>
+  <p><strong>他のサイトへのリンク</strong></p>
+  <p>
+    このサービスには広告など他のサイトへのリンクが含まれている場合があります。サードパーティのリンクをクリックすると、そのサイトにリダイレクトされます。
+    これらの外部サイトは私が運営していないため、ウェブサイトのプライバシーポリシーを確認することを強くお勧めします。
+    私はいかなる第三者サイトやサービスのコンテンツ、プライバシーポリシー、またはプラクティスについても制御できず、責任を負いませんのでご了承ください。
+  </p>
+  <p><strong>お子様のプライバシー</strong></p>
+  <div>
+    <p>
+      このサービスは13歳以下のお子様もお楽しみいただけます。また、個人情報を意図的に収集することはありません。
+      私がお子様から個人情報を提供されたことを発見した場合、すぐにこれを削除します。
+      お子様が個人情報を提供したことを確認した場合は、適切な措置をとることができるよう、迅速に私にご連絡ください。
+    </p>
+  </div>
+  <p><strong>このプライバシーポリシーの変更</strong></p>
+  <p>
+    私は時々、私たちのプライバシーポリシーを更新することがあります。したがって、このページを定期的に確認することをお勧めします。
+    新しいプライバシーポリシーをこのページに投稿することで、あなたに通知します。
+  </p>
+  <p>このポリシーは2023年4月2日から有効です。</p>
+  <p><strong>お問い合わせ</strong></p>
+  <p>
+    私のプライバシーポリシーに関するご質問やご提案がある場合は、cist.b218.f.fukushi@gmail.com までご連絡ください。
+  </p>
+  <p>このプライバシーポリシーのページは<a href="https://privacypolicytemplate.net" target="_blank"
+      rel="noopener noreferrer">privacypolicytemplate.net</a>で作成され、<a
+      href="https://app-privacy-policy-generator.nisrulz.com/" target="_blank" rel="noopener noreferrer">App Privacy
+      Policy Generator</a>によって変更/生成されました。</p>
 </body>
 
 </html>
