add: フォームとcssスタイルを追加

--- a/terms_of_service.html
+++ b/terms_of_service.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>利用規約</title>
+
+  <link rel="stylesheet" href="./static/css/common.css" type="text/css">
+
+  <title>「さがしてビンゴ！」利用規約</title>
   <style>
     body {
       font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -15,82 +18,90 @@
 </head>
 
 <body>
-  <strong>利用規約</strong>
-  <p>
-    アプリをダウンロードまたは使用することにより、これらの利用規約が自動的に適用されます。
-    アプリを使用する前に、これらの利用規約を注意深く読んでください。アプリ、アプリの一部、または商標をいかなる方法でもコピーまたは変更することはできません。
-    アプリのソースコードを抽出しようとすることはできません。アプリを他の言語に翻訳したり、派生バージョンを作成したりすることはできません。
-    アプリ自体、およびそれに関連するすべての商標、著作権、データベース権、およびその他の知的財産権は、依然としてFusa Fukushiに帰属します。
-  </p>
-  <p>
-    Fusa Fukushiは、このアプリをできるだけ有用かつ効率的にすることを約束しています。
-    そのため、いつでも、任意の理由でアプリの変更やサービスの料金を請求する権利を留保します。
-    アプリまたはそのサービスに対して請求される料金が何であるかを明確にしていない場合、私たちはアプリまたはそのサービスに対して料金を請求することはありません。
-  </p>
-  <p>
-    「さがしてビンゴ！」アプリは、私たちが提供するサービスを提供するために、あなたが提供した個人データを保存および処理します。
-    あなたの電話とアプリへのアクセスを安全に保つことはあなたの責任です。
-    したがって、デバイスの公式オペレーティングシステムによって課されたソフトウェアの制限や制約を解除するプロセスであるジェイルブレイクまたはルート化を行わないことをお勧めします。
-    これにより、あなたの電話がマルウェア/ウイルス/悪意のあるプログラムに脆弱になり、電話のセキュリティ機能が危険にさらされ、「さがしてビンゴ！」アプリが適切に動作しなくなる可能性があります。
-  </p>
-  <div>
-    <p>
-      アプリは、利用される第三者サービスの利用規約を宣言しています。
-    </p>
-    <p>
-      アプリが使用する第三者サービスの利用規約へのリンク
-    </p>
-    <ul>
-      <li><a href="https://policies.google.com/terms" target="_blank" rel="noopener noreferrer">Google Play Services</a>
-      </li>
-      <li><a href="https://developers.google.com/admob/terms" target="_blank" rel="noopener noreferrer">AdMob</a></li>
-      <li><a href="https://firebase.google.com/terms/analytics" target="_blank" rel="noopener noreferrer">Google
-          Analytics for Firebase</a></li>
-      <li><a href="https://firebase.google.com/terms/crashlytics" target="_blank" rel="noopener noreferrer">Firebase
-          Crashlytics</a></li>
-      <li><a href="https://www.revenuecat.com/terms" target="_blank" rel="noopener noreferrer">RevenueCat</a></li>
-    </ul>
-    <p>
-      アプリの一部の機能には、アクティブなインターネット接続が必要です。
-      接続はWi-Fiまたは携帯電話事業者によって提供される場合がありますが、Wi-Fiにアクセスできない場合やデータ通信量が残っていない場合には、アプリが完全に機能しない場合があります。
-      この点についてFusa Fukushiは責任を負いかねます。
-    </p>
-    <p>
-      Wi-Fiがない地域でアプリを使用する場合は、携帯電話事業者との契約条件が適用されることを覚えておく必要があります。
-      そのため、アプリにアクセスしている間にデータ通信料金が請求されたり、他の第三者による料金が発生する可能性があります。
-      アプリの使用により、あなたはこのような料金、つまり自宅の地域（地域または国）外でアプリを使用する場合にはローミングデータ通信料金も含め、このような料金に対して責任を負うことになります。
-      アプリを使用しているデバイスの請求書の支払人ではない場合、アプリの使用について請求書の支払人から許可を得たと想定しています。
-    </p>
-    <p>
-      同様に、Fusa Fukushiは常にアプリの使用方法について責任を負うことはできません。
-      すなわち、あなたのデバイスが充電されていることを確認する必要があります。
-      もしバッテリーが切れてサービスを利用できなくなった場合、Fusa Fukushiは責任を負いかねます。
-    </p>
-    <p>
-      Fusa Fukushiは、アプリの機能によって生じた直接または間接の損失について、一切の責任を負いません。
-    </p>
-    <p>
-      いずれかのタイミングで、アプリを更新することを希望する場合があります。
-      アプリは現在、AndroidとiOSで利用可能です。
-      両システム（およびアプリの利用可能性を拡大するために追加システムがある場合）の要件は変更される可能性があり、アプリを引き続き使用する場合は、アップデートをダウンロードする必要があります。
-      Fusa Fukushiは、常にあなたに関連するかつAndroidおよびiOSバージョンで動作するアップデートを提供することを約束するわけではありません。
-      ただし、提供されたアプリケーションのアップデートを常に受け入れることを約束しています。
-      また、いつでもあなたに通知することなく、アプリの提供を停止することがあります。
-      私たちから通知がない場合でも、アプリの提供が停止された際は、あなたに付与された権利とライセンスは終了します。また、必要に応じてアプリの使用を停止し、デバイスから削除する必要があります。
-    </p>
-    <p><strong>この利用規約の変更</strong></p>
-    <p>
-      私は利用規約を定期的に更新する場合があります。そのため、変更があった場合にはこのページを定期的に確認することをお勧めします。新しい利用規約をこのページに掲載することで、変更を通知いたします。
-    </p>
-    <p>
-      この利用規約は2023年4月2日から有効です。
-    </p>
-    <p><strong>お問い合わせ</strong></p>
-    <p>
-      利用規約に関するご質問やご提案がある場合は、お気軽に cist.b218.f.fukushi@gmail.com までご連絡ください。
-    </p>
-    <p>この利用規約ページは<a href="https://app-privacy-policy-generator.nisrulz.com/" target="_blank"
-        rel="noopener noreferrer">App Privacy Policy Generator</a>によって生成されました。</p>
+  <div class="container">
+    <div class="header">
+      <h2>「さがしてビンゴ！」利用規約</h2>
+    </div>
+    <div class="body">
+      <p>
+        アプリをダウンロードまたは使用することにより、これらの利用規約が自動的に適用されます。
+        アプリを使用する前に、これらの利用規約を注意深く読んでください。アプリ、アプリの一部、または商標をいかなる方法でもコピーまたは変更することはできません。
+        アプリのソースコードを抽出しようとすることはできません。アプリを他の言語に翻訳したり、派生バージョンを作成したりすることはできません。
+        アプリ自体、およびそれに関連するすべての商標、著作権、データベース権、およびその他の知的財産権は、依然としてFusa Fukushiに帰属します。
+      </p>
+      <p>
+        Fusa Fukushiは、このアプリをできるだけ有用かつ効率的にすることを約束しています。
+        そのため、いつでも、任意の理由でアプリの変更やサービスの料金を請求する権利を留保します。
+        アプリまたはそのサービスに対して請求される料金が何であるかを明確にしていない場合、私たちはアプリまたはそのサービスに対して料金を請求することはありません。
+      </p>
+      <p>
+        「さがしてビンゴ！」アプリは、私たちが提供するサービスを提供するために、あなたが提供した個人データを保存および処理します。
+        あなたの電話とアプリへのアクセスを安全に保つことはあなたの責任です。
+        したがって、デバイスの公式オペレーティングシステムによって課されたソフトウェアの制限や制約を解除するプロセスであるジェイルブレイクまたはルート化を行わないことをお勧めします。
+        これにより、あなたの電話がマルウェア/ウイルス/悪意のあるプログラムに脆弱になり、電話のセキュリティ機能が危険にさらされ、「さがしてビンゴ！」アプリが適切に動作しなくなる可能性があります。
+      </p>
+      <div>
+        <p>
+          アプリは、利用される第三者サービスの利用規約を宣言しています。
+        </p>
+        <p>
+          アプリが使用する第三者サービスの利用規約へのリンク
+        </p>
+        <ul>
+          <li><a href="https://policies.google.com/terms" target="_blank" rel="noopener noreferrer">Google Play
+              Services</a>
+          </li>
+          <li><a href="https://developers.google.com/admob/terms" target="_blank" rel="noopener noreferrer">AdMob</a>
+          </li>
+          <li><a href="https://firebase.google.com/terms/analytics" target="_blank" rel="noopener noreferrer">Google
+              Analytics for Firebase</a></li>
+          <li><a href="https://firebase.google.com/terms/crashlytics" target="_blank" rel="noopener noreferrer">Firebase
+              Crashlytics</a></li>
+          <li><a href="https://www.revenuecat.com/terms" target="_blank" rel="noopener noreferrer">RevenueCat</a></li>
+        </ul>
+        <p>
+          アプリの一部の機能には、アクティブなインターネット接続が必要です。
+          接続はWi-Fiまたは携帯電話事業者によって提供される場合がありますが、Wi-Fiにアクセスできない場合やデータ通信量が残っていない場合には、アプリが完全に機能しない場合があります。
+          この点についてFusa Fukushiは責任を負いかねます。
+        </p>
+        <p>
+          Wi-Fiがない地域でアプリを使用する場合は、携帯電話事業者との契約条件が適用されることを覚えておく必要があります。
+          そのため、アプリにアクセスしている間にデータ通信料金が請求されたり、他の第三者による料金が発生する可能性があります。
+          アプリの使用により、あなたはこのような料金、つまり自宅の地域（地域または国）外でアプリを使用する場合にはローミングデータ通信料金も含め、このような料金に対して責任を負うことになります。
+          アプリを使用しているデバイスの請求書の支払人ではない場合、アプリの使用について請求書の支払人から許可を得たと想定しています。
+        </p>
+        <p>
+          同様に、Fusa Fukushiは常にアプリの使用方法について責任を負うことはできません。
+          すなわち、あなたのデバイスが充電されていることを確認する必要があります。
+          もしバッテリーが切れてサービスを利用できなくなった場合、Fusa Fukushiは責任を負いかねます。
+        </p>
+        <p>
+          Fusa Fukushiは、アプリの機能によって生じた直接または間接の損失について、一切の責任を負いません。
+        </p>
+        <p>
+          いずれかのタイミングで、アプリを更新することを希望する場合があります。
+          アプリは現在、AndroidとiOSで利用可能です。
+          両システム（およびアプリの利用可能性を拡大するために追加システムがある場合）の要件は変更される可能性があり、アプリを引き続き使用する場合は、アップデートをダウンロードする必要があります。
+          Fusa Fukushiは、常にあなたに関連するかつAndroidおよびiOSバージョンで動作するアップデートを提供することを約束するわけではありません。
+          ただし、提供されたアプリケーションのアップデートを常に受け入れることを約束しています。
+          また、いつでもあなたに通知することなく、アプリの提供を停止することがあります。
+          私たちから通知がない場合でも、アプリの提供が停止された際は、あなたに付与された権利とライセンスは終了します。また、必要に応じてアプリの使用を停止し、デバイスから削除する必要があります。
+        </p>
+        <p><strong>この利用規約の変更</strong></p>
+        <p>
+          私は利用規約を定期的に更新する場合があります。そのため、変更があった場合にはこのページを定期的に確認することをお勧めします。新しい利用規約をこのページに掲載することで、変更を通知いたします。
+        </p>
+        <p>
+          この利用規約は2023年4月2日から有効です。
+        </p>
+        <p><strong>お問い合わせ</strong></p>
+        <p>
+          利用規約に関するご質問やご提案がある場合は、お気軽に cist.b218.f.fukushi@gmail.com までご連絡ください。
+        </p>
+        <p>この利用規約ページは<a href="https://app-privacy-policy-generator.nisrulz.com/" target="_blank"
+            rel="noopener noreferrer">App Privacy Policy Generator</a>によって生成されました。</p>
+      </div>
+    </div>
 </body>
 
 </html>
