update: サードパーティーのリンク修正

--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -53,9 +53,9 @@
               rel="noopener noreferrer">AdMob</a></li>
           <li><a href="https://firebase.google.com/policies/analytics" target="_blank" rel="noopener noreferrer">Google
               Analytics for Firebase</a></li>
-          <li><a href="https://firebase.google.com/support/privacy/" target="_blank" rel="noopener noreferrer">Firebase
-              Crashlytics</a></li>
-          <li><a href="https://www.revenuecat.com/privacy" target="_blank" rel="noopener noreferrer">RevenueCat</a></li>
+          <!-- <li><a href="https://firebase.google.com/support/privacy/" target="_blank" rel="noopener noreferrer">Firebase
+              Crashlytics</a></li> -->
+          <!-- <li><a href="https://www.revenuecat.com/privacy" target="_blank" rel="noopener noreferrer">RevenueCat</a></li> -->
         </ul>
       </div>
       <p><strong>ログデータ</strong></p>
