--- a/terms_of_service.html
+++ b/terms_of_service.html
@@ -55,9 +55,9 @@
           </li>
           <li><a href="https://firebase.google.com/terms/analytics" target="_blank" rel="noopener noreferrer">Google
               Analytics for Firebase</a></li>
-          <li><a href="https://firebase.google.com/terms/crashlytics" target="_blank" rel="noopener noreferrer">Firebase
+          <!-- <li><a href="https://firebase.google.com/terms/crashlytics" target="_blank" rel="noopener noreferrer">Firebase
               Crashlytics</a></li>
-          <li><a href="https://www.revenuecat.com/terms" target="_blank" rel="noopener noreferrer">RevenueCat</a></li>
+          <li><a href="https://www.revenuecat.com/terms" target="_blank" rel="noopener noreferrer">RevenueCat</a></li> -->
         </ul>
         <p>
           アプリの一部の機能には、アクティブなインターネット接続が必要です。
