update: フォームに文章追加

--- a/form.html
+++ b/form.html
@@ -84,6 +84,9 @@
             ご利用の端末の情報（機種名やOSのバージョン）をご記入ください。：
           </label><br>
           <p style="font-size: 14px;">
+            分かる範囲でご協力いただけますと幸いです。未記入でも問題ございません。
+          </p>
+          <p style="font-size: 14px;">
             iPhoneの確認方法：<br />
             デバイスにインストールされているソフトウェアのバージョンを確認するには、「設定」アプリ >「一般」の順に選択し、「情報」をタップします。
             <br />
